Add users authentication with JWT
